# chainball-sboard

./: .gitignore  Makefile  README.md  board  board.py  dev_requirements.txt  game.py  nrf24.py  nrf24const.py  pyproject.toml  remote.py  requirements.txt  roadmap.org  score.py  setup.py  soundfx.py  tests.sh  timer.py  web.py
announce/: matrixser.py  timer.py
conf/: db.json  game.json  game_dump_fmt.json  remotemap.json  rules.json  scoreboard.json  sfx.json
debug/: buildozer.spec  main.py  miscui.py  panel.kv  panel.py
game/: config.py  constants.py  engine.py  exceptions.py  persist.py  playertxt.py  remotemapper.py  sfxmapper.py
misc/: scoreboard.service
remote/: constants.py  decoder.py  nrf24.py  nrf24const.py  pair.py  persistence.py
score/: constants.py  exceptions.py  handler.py  player.py
scoreboard/: __init__.py  web.py
scoreboard/announce/: matrixser.py  timer.py
scoreboard/cbcentral/: __init__.py  api.py  live.py  localdb.py  queries.py  util.py
scoreboard/game/: config.py  constants.py  engine.py  exceptions.py  persist.py  playertxt.py  remotemapper.py  sfxmapper.py
scoreboard/ipc/: __init__.py  publisher.py  server.py
scoreboard/remote/: __init__.py  constants.py  decoder.py  nrf24.py  pair.py  persistence.py
scoreboard/score/: __init__.py  constants.py  handler.py  player.py
scoreboard/util/: configfiles.py  mopidy.py  mpris.py  musicplayer.py  soundfx.py  spotify.py  zeroconf.py
scoreboard/views/: base.tpl  index.tpl  (+2 more)
tests/: test_all.py
util/: soundfx.py  threads.py  zeroconf.py
views/: dump.tpl  index.tpl  psetup.tpl
(+6 files in other folders)
