[tool.poetry]
name = "chainball-sboard"
version = "0.1.0"
description = "The Chainball Scoreboard"
authors = ["Bruno Morais <brunosmmm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"
playsound = "^1.3.0"
zmq = "^0.0.0"
requests = "^2.26.0"
systemd-python = "^234"
dbus-python = "^1.2.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
